[project]
name = "hackthon-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "avro>=1.12.1",
    "certifi>=2026.6.17",
    "crewai>=0.134.0",
    "dotenv>=0.9.9",
    "groq>=0.37.1",
    "grpcio>=1.81.1",
    "grpcio-tools>=1.81.1",
    "ipython>=9.15.0",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-experimental>=0.4.2",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "langchain-mcp-adapters>=0.3.0",
    "langchain-openai>=1.3.3",
    "langchain-qwq>=0.3.5",
    "langchain-tavily>=0.2.18",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.7",
    "langgraph-checkpoint-mongodb>=0.4.0",
    "langgraph-checkpoint-postgres>=3.1.0",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "llama-index>=0.14.23",
    "llama-index-embeddings-dashscope>=0.5.0",
    "llama-index-embeddings-huggingface>=0.7.0",
    "llama-index-embeddings-openai>=0.6.0",
    "llama-index-llms-openai>=0.7.9",
    "llama-index-vector-stores-pinecone>=0.8.0",
    "pandas>=3.0.3",
    "pinecone>=7.3.0",
    "psycopg-binary>=3.3.4",
    "psycopg-pool>=3.3.1",
    "pypdf>=6.14.2",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
    "salesforce-cdp-connector>=1.0.20",
    "simple-salesforce>=1.12.10",
    "tavily>=1.1.0",
]
